--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+    "test1": "npm run start && curl -v http://localhost:3000 && exit 1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
